# Tender_Kimi

./: .dockerignore  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
INSTRUCTIONS_DAY2DAY_TASKS/: INSTRCTION 01  28072025.txt  INSTRCTION 02  28072025.txt  INSTRCTION 03  28072025.txt  INSTRCTION 04-STAGE-REVIEW-v2  28072025-1108pm.txt  INSTRCTION 04-STAGE-REVIEW-v2  28072025.txt  INSTRCTION 06-W2  28072025-1115pm.txt  INSTRCTION 07-W1-4  29072025.txt  INSTRCTION ABOUT OBJECTIVE  28072025.txt  STANDING ORDER- STRICT COMPLIANCE.txt  github.comCRAJKUMARSINGHTender.txt  masterplan.md
backend/: .coverage  Dockerfile  README.md  coverage.xml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/.github/workflows/: ci-cd.yml
backend/app/: main.py
backend/app/api/: __init__.py  uploads.py
backend/app/api/v1/: bidders.py  reports.py
backend/app/core/: rate_limiter.py
backend/app/models/: __init__.py
backend/app/services/: excel_parser.py
backend/tender_kimi_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  conftest.py
tender-frontend/: .env  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
tender-frontend/public/: _routes.json
tender-frontend/services/: excel_parser.py  report_generator.py
tender-frontend/src/: App.tsx  index.css  vite-env.d.ts
tender-frontend/src/components/: Layout.tsx
tender-frontend/src/lib/: api.ts  queryClient.ts
test_files/: single_work_nit.xlsx
(+4 files in other folders)
